# fsds-recsys

./: .gitignore  Makefile  README.md  TROUBLESHOOT.md  pyproject.toml
chapters/l2/: .env.example  README.md  pyproject.toml
chapters/l2/data_prep/: compose.yml
chapters/l2/notebooks/: 002-simulate-oltp.ipynb
chapters/l6/: .gitignore  Makefile  README.md  pyproject.toml
chapters/l6/notebooks/: 010-prep-item2vec.ipynb  010-test-prep-item2vec.ipynb  011-item2vec.ipynb  012-item2vec-lightning.ipynb  999-dataset-iterable.ipynb  999-pytorch-lightning.ipynb  999-test-python-iterator.ipynb  train_item2vec.py
chapters/l6/src/: test_distributed.py  test_lightning.py  train_utils.py
chapters/l6/src/skipgram/: dataset.py  model.py  trainer.py
chapters/l7/: Makefile  README.md  compose.api.yml  compose.kv-store.yml  compose.ml-platform.yml  compose.yml  pyproject.toml  requirements.txt
chapters/l7/api/: main.py
chapters/l7/notebooks/: 010-prep-item2vec.ipynb  011-item2vec.ipynb  012-batch-precompute.ipynb  013-store-batch-recs.ipynb  014-store-user-item-sequence.ipynb
chapters/l7/src/: train_utils.py
data_prep/: Makefile  compose.clickhouse.yml
data_prep/dbt/feast/: dbt_project.yml
data_prep/fsds_feast/feature_repo/: feature_store.yaml  test_workflow.py
notebooks/: 001-l1-eda.ipynb  003-l2-feature-store-pipeline.ipynb  004-l3-mvp-retrieval.ipynb  005-l3-mvp-ranking.ipynb  006-l3-mvp-ranking-pairwise-loss.ipynb  006-l3-mvp-ranking-pairwise-losst.ipynb
src/features/split/: __init__.py  timebased.py
src/utils/: hash.py  io.py  time.py
(+7 files in other folders)
