[tool.poetry]
name = "fsds-recsys"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quydv@fullstackdatascience.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
datasets = "^2.21.0"
pandas = "^2.2.2"
loguru = "^0.7.2"
mlflow = "^2.15.1"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
ipywidgets = "^8.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
